@@ -449,6 +449,21 @@ class SGL_Task_RegisterTrustedIPs extends SGL_Task
 /**
  * @package Task
  */
+class SGL_Task_LoadCustomConfig extends SGL_Task
+{
+    function run($conf)
+    {
+        if (!empty($conf['path']['pathToCustomConfigFile'])) {
+            if (is_file($conf['path']['pathToCustomConfigFile'])) {
+                require_once realpath($conf['path']['pathToCustomConfigFile']);
+            }
+        }
+    }
+}
+
+/**
+ * @package Task
+ */
 class SGL_Task_EnsureBC extends SGL_Task
 {
     function run($data)
